--- a/jquery.html
+++ b/jquery.html
@@ -17,7 +17,8 @@
 	<script type="text/javascript">
 	$(function  () {
 		$('#box').click(function(event) {
-			$(this).hide();
+			$(this).css('background', 'red');
+			$(this).css('font-size','50px');
 		});
 		
 
